monapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monapp-service
spec:
  selector:
    app: monapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
