monapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /service1
        pathType: Prefix
        backend:
          service:
            name: monapp-service
            port:
              number: 80
      - path: /service2
        pathType: Prefix
        backend:
          service:
            name: second-service
            port:
              number: 80
